package mushroom;

message MessageHeader {
    optional uint32 msgId      = 1;
    optional uint32 bodyLength = 2;
    // TODO: add more
}

enum MessageId {
    HeartbeatReq  = 1;
    HeartbeatRsp  = 2;
    LoginReq      = 3;
    LoginRsp      = 4;
    ShareImageReq = 5;
    ShareImageRsp = 6;
}

enum ErrorCode {
    Ok                = 0;
    DatabaseError     = 1;
    UserNotFound      = 2;
    IncorrectPassword = 3;
}

message HeartbeatReq {
}

message HeartbeatRsp {
}

message LoginReq {
    optional string email    = 1;
    optional string password = 2;
    optional string deviceId = 3;
}

message LoginRsp {
    optional int32 ret   = 1;
    optional string name = 2;
}

message ShareImageReq {
    enum ShareScope {
        Private = 1; // only this device can see
        User    = 2; // only share among the same user's devices
        Public  = 3; // share to the public
    }

    optional string name      = 1;
    optional bytes image      = 2;
    optional ShareScope scope = 3;
}

message ShareImageRsp {
    optional int32 ret     = 1;
    optional int32 shareId = 2;
}